# BudgetCut

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  TRYIT.md  docker-compose.yml  package.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  bridge.ts  fmt.ts  i18n.ts  index.css  store.ts  types.ts  update.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  receipts.rs
apps/desktop/src/components/: AccountDetails.tsx  ActualsPanel.tsx  CommandPalette.tsx  Comparison.tsx  Dashboard.tsx  IncentivePanel.tsx  LibraryPanel.tsx  Login.tsx  Logo.tsx  NationalSheetPanel.tsx  NetflixBudget.tsx  NetflixCashFlow.tsx  NetflixCostReport.tsx  NetflixTrialBalance.tsx  POPanel.tsx  ReceiptScanPanel.tsx  ReportBuilder.tsx  SchedulePanel.tsx  SeriesPanel.tsx  SettlementPanel.tsx  SetupTools.tsx  TopActions.tsx  TopRates.tsx  Topsheet.tsx
apps/desktop/src/fixtures/: demo.json
crates/budgetcut-core/: Cargo.toml
crates/budgetcut-core/examples/: actuals.rs  series_compare.rs  topsheet.rs
crates/budgetcut-core/src/: actuals.rs  compare.rs  expr.rs  hlc.rs  ids.rs  incentives.rs  lib.rs  library.rs  money.rs  po.rs  scheduling.rs  series.rs  settlement.rs  validation.rs  view.rs
crates/budgetcut-core/src/calc/: mod.rs
crates/budgetcut-core/src/model/: mod.rs
crates/budgetcut-core/src/ops/: mod.rs
crates/budgetcut-core/src/templates/: mod.rs
crates/budgetcut-core/src/templates/data/: dizi_full.json  netflix_coa.json
crates/budgetcut-core/tests/: calc_coverage.rs  golden_tr_dizi.rs  ops_merge.rs  perf_recalc.rs  proptest_calc.proptest-regressions  proptest_calc.rs  proptest_convergence.rs
crates/budgetcut-export/: Cargo.toml
crates/budgetcut-export/examples/: gen_report.rs
crates/budgetcut-export/src/: lib.rs
crates/budgetcut-importers/: Cargo.toml
crates/budgetcut-importers/src/: lib.rs  rates.rs
crates/budgetcut-scheduling/: Cargo.toml
crates/budgetcut-scheduling/src/: lib.rs
crates/budgetcut-server/: Cargo.toml
crates/budgetcut-server/src/: auth.rs  lib.rs  main.rs  rbac.rs
crates/budgetcut-server/tests/: analytics_e2e.rs  hierarchy_e2e.rs  presence_e2e.rs  rbac_e2e.rs  sync_e2e.rs
crates/budgetcut-store/: Cargo.toml
crates/budgetcut-store/examples/: dump_json.rs  offline.rs
crates/budgetcut-store/src/: dto.rs  error.rs  lib.rs  session.rs  store.rs
crates/budgetcut-store/tests/: persistence.rs
docs/: mobile.md  packaging.md  self-host.md
docs/adr/: 0001-shared-core-crate.md  0002-server-authoritative-lww-sync.md  0003-decimal-money-and-uuidv7.md  0004-turkish-fringe-modes.md
