[workspace]
resolver = "2"
members = [
    "crates/budgetcut-core",
    "crates/budgetcut-store",
    "crates/budgetcut-server",
    "crates/budgetcut-importers",
    "crates/budgetcut-export",
    "crates/budgetcut-scheduling",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "AGPL-3.0-or-later"
authors = ["BudgetCut"]
repository = "https://github.com/budgetcut/budgetcut"

[workspace.dependencies]
budgetcut-core = { path = "crates/budgetcut-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1.36", features = ["serde-with-str", "maths"] }
rust_decimal_macros = "1.36"
uuid = { version = "1.10", features = ["v7", "serde"] }
thiserror = "1"
proptest = "1.5"
rusqlite = { version = "0.32", features = ["bundled"] }
budgetcut-store = { path = "crates/budgetcut-store" }

# Build profile: fast incremental dev builds, optimized tests for the calc engine.
[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1
