[package]
name = "budgetcut-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared domain model, calculation engine, and sync op types for BudgetCut. Zero I/O, zero platform deps — compiled into both the desktop client and the sync server so numbers never diverge."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
uuid.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true
