[package]
name = "budgetcut-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Offline-first local persistence for BudgetCut (§7): SQLite op-log + base snapshot, replayed through budgetcut-core. Tauri-free so it's testable headlessly; the desktop app reuses it."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
budgetcut-core.workspace = true
rusqlite.workspace = true
rust_decimal.workspace = true
serde.workspace = true
uuid.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rust_decimal_macros.workspace = true
tempfile = "3"
